<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('detalle_compras', function (Blueprint $table) {
            $table->id();
            $table->foreignId('compra_id')->constrained('compras')->OnDelete('cascade');
            $table->foreignId('producto_id')->constrained('productos')->OnDelete('cascade');
            $table->foreignId('lote_id')->constrained('lotes')->OnDelete('cascade');
            $table->decimal('precio_unitario');
            $table->integer('cantidad');
            $table->decimal('subtotal',10, 2);
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('detalle_compras');
    }
};
